load more button bug fix

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,4 @@
-@import './common';
-@import './btn-load-more';
 // @import './example';
-
+@import './common';
+@import './header';
+@import './btn-load-more';
